--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <main>
       <section class="gallery-section"></section>
       <section class="editor-section">
-        <canvas class="meme-canvas"="500" height="500"></canvas>
+        <canvas width="500" height="500"></canvas>
       </section>
       <section class="editor-section">
-        <input type="text" id="topText" placeholder="Top text" class="text-input">
-            <input type="text" id="bottomText" placeholder="Bottom text" class="text-input">
+        <input type="text" class="text-input top-txt" placeholder="Top text" onchange="drawText(event)">
+            <input type="text" class="text-input bottom-txt" placeholder="Bottom text" onchange="drawText(event)">
             <div class="controls">
                 <button class="control-btn">
                     <img src="icons/up-and-down-opposite-double-arrows-side-by-side.png" alt="Move Text">
                 </button>
-                <button class="control-btn">
+                <button class="control-btn add-txt-btn" onclick="addText()">
                     <img src="icons/add.png" alt="Add Text">
                 </button>
                 <button class="control-btn">
@@ -66,8 +66,8 @@
                 <button class="carousel-btn" id="nextSticker">❯</button>
             </div>
             <div class="util-btns">
-              <button class="share-btn"><i class="fa-solid fa-share"></i> Share</button>
-              <button class="download-btn"><i class="fa-solid fa-download"></i> Download</button>
+              <button class="share-btn" onclick="shareToFacebook()"><i class="fa-solid fa-share"></i> Share</button>
+              <button class="download-btn" onclick="downloadCanvas()" download><i class="fa-solid fa-download"></i> Download</button>
               <button class="save-btn"><i class="fa-regular fa-floppy-disk"></i> Save</button>
             </div>
       </section>
@@ -77,6 +77,8 @@
       <p class="footer-text">memegen</p>
       <p class="footer-text">all rights reserved 2019</p>
     </footer>
+    <script src="js/storage.service.js"></script>
+    <script src="js/meme.service.js"></script>
     <script src="js/main.controller.js"></script>
   </body>
 </html>
