--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <main>
       <section class="gallery-section"></section>
       <section class="editor-section">
-        <canvas width="500" height="500"></canvas>
+        <canvas width="500" height="500" style="border:2px solid #bbb; margin-left:10px; margin-top:10px;"></canvas>
       </section>
       <section class="editor-section">
         <input type="text" class="text-input top-txt" placeholder="Top text" oninput="setLineTxt(this)">
-            <input type="text" class="text-input bottom-txt" placeholder="Bottom text" oninput="setLineTxt(this)">
+        <input type="text" class="text-input bottom-txt" placeholder="Bottom text" oninput="setLineTxt(this)">
             <div class="controls">
                 <button class="control-btn">
                     <img src="icons/up-and-down-opposite-double-arrows-side-by-side.png" alt="Move Text">
