--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <canvas width="500" height="500" style="border:2px solid #bbb; margin-left:10px; margin-top:10px;"></canvas>
       </section>
       <section class="editor-section">
-        <input type="text" class="text-input top-txt" placeholder="Top text" oninput="setLineTxt(this)">
-        <input type="text" class="text-input bottom-txt" placeholder="Bottom text" oninput="setLineTxt(this)">
+        <input type="text" class="text-input top-txt" placeholder="text" oninput="setLineTxt(this)">
+        <input type="text" class="text-input bottom-txt" placeholder="text" oninput="setLineTxt(this)">
             <div class="controls">
                 <button class="control-btn">
                     <img src="icons/up-and-down-opposite-double-arrows-side-by-side.png" alt="Move Text">
@@ -33,27 +33,27 @@
                     <img src="icons/add.png" alt="Add Text">
                 </button>
                 <button class="control-btn">
-                    <img src="icons/trash.png" alt="Delete Text">
+                    <img src="icons/trash.png" alt="Delete Text" onclick="deleteText()">
                 </button>
                 <button class="control-btn">
-                    <img src="icons/increase font - icon.png" alt="Increase Font Size">
+                    <img src="icons/increase font - icon.png" alt="Increase Font Size" onclick="setFontSize(2, true)">
                 </button>
                 <button class="control-btn">
-                    <img src="icons/decrease font - icon.png" alt="Decrease Font Size">
+                    <img src="icons/decrease font - icon.png" alt="Decrease Font Size" onclick="setFontSize(2, false)">
                 </button>
                 <button class="control-btn">
-                    <img src="icons/align-to-left.png" alt="Align Left">
+                    <img src="icons/align-to-left.png" alt="Align Left" onclick="setFontDirection('left')">
                 </button>
                 <button class="control-btn">
-                    <img src="icons/center-text-alignment.png" alt="Align Center">
+                    <img src="icons/center-text-alignment.png" alt="Align Center" onclick="setFontDirection('center')">
                 </button>
                 <button class="control-btn">
-                    <img src="icons/align-to-right.png" alt="Align Right">
+                    <img src="icons/align-to-right.png" alt="Align Right" onclick="setFontDirection('right')">
                 </button>
                 <label for="color-input">
                   <img class="control-btn" src="icons/paint-board-and-brush.png" alt="Color picker icon">
                 </label>
-                <input class="control-btn" type="color" id="color-input" style="display: none;">
+                <input class="control-btn" type="color" id="color-input" style="display: none;" oninput="setTxtColor(this)">
             </div>
             <div class="sticker-section">
                 <button class="carousel-btn" id="prevSticker">❮</button>
