Update to Support multi text loading

--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
       <div class="header-left">
         <img src="logo/logo.png" alt="memegen logo" class="logo">
       </div>
-      <nav>
+      <nav class="main-nav">
         <a href="#" onclick="displayGallery()">Gallery</a>
         <a href="#">About</a>
+        <button class="btn-menu" onclick="toggleMenu()">☰</button>
       </nav>
     </header>
     <main>
       <section class="gallery-section">
-        <div class="search-bar">
-          <input type="text" placeholder="Enter search keyword">
-      </div>
       <nav>
           <ul>
+            <div class="search-bar">
+              <input type="text" placeholder="Enter search keyword">
+          </div>
               <li>funny</li>
               <li>comics</li>
               <li>dogs</li>
