--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
         <canvas width="500" height="500" style="border:2px solid #bbb; margin-left:10px; margin-top:10px;"></canvas>
       </section>
     <section class="editor-section hidden">
-        <input type="text" class="text-input top-txt" placeholder="text" oninput="setLineTxt(this)">
-        <input type="text" class="text-input bottom-txt" placeholder="text" oninput="setLineTxt(this)">
+        <input type="text" class="text-input" placeholder="text" oninput="setLineTxt(this)">
             <div class="controls">
                 <button class="control-btn">
-                    <img src="icons/up-and-down-opposite-double-arrows-side-by-side.png" alt="Move Text">
+                    <img src="icons/up-and-down-opposite-double-arrows-side-by-side.png" alt="Move Text" onclick="switchToNextText()">
                 </button>
                 <button class="control-btn add-txt-btn" onclick="addText()">
                     <img src="icons/add.png" alt="Add Text">
