Fully Implement Logic of text on canvas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <canvas width="500" height="500" style="border:2px solid #bbb; margin-left:10px; margin-top:10px;"></canvas>
       </section>
     <section class="editor-section hidden">
-        <input type="text" class="text-input" placeholder="text" oninput="setLineTxt(this)">
+        <input type="text" class="text-input" placeholder="Add Text Here" oninput="setLineTxt(this)">
             <div class="controls">
                 <button class="control-btn">
                     <img src="icons/up-and-down-opposite-double-arrows-side-by-side.png" alt="Move Text" onclick="switchToNextText()">
@@ -96,9 +96,9 @@
       <p class="footer-text">all rights reserved 2019</p>
     </footer>
     <script src="js/storage.service.js"></script>
-    <script src="js/meme.service.js"></script>
+    <script src="js/editor.service.js"></script>
     <script src="js/gallery.service.js"></script>
-    <script src="js/meme.controller.js"></script>
+    <script src="js/editor.controller.js"></script>
     <script src="js/gallery.controller.js"></script>
   </body>
 </html>
