--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="main-nav">
         <a href="#" onclick="displayGallery()">Gallery</a>
         <a href="#">About</a>
-        <button class="btn-menu" onclick="toggleMenu()">☰</button>
+        <button class="btn-menu hidden" onclick="toggleMenu()">☰</button>
       </nav>
     </header>
     <main>
@@ -36,6 +36,14 @@
   </header>
       <div class="image-grid">
           <!-- Images will be loaded here by JavaScript -->
+          <!-- <input type="file" class="fileInput">
+        <button class="upload-btn" onclick="onUploadImg()">
+            <i class="fa-solid fa-upload"></i> Upload Image
+        </button> -->
+        <label for="file-upload" class="upload-btn">
+          <i class="fa-solid fa-upload"></i> Upload Image
+      </label>
+      <input id="file-upload" type="file" onchange="onImgInput(event)" accept="image/*"/>
       </div>
       </section>
       <section class="canvas-section hidden">
@@ -77,7 +85,7 @@
             </div>
             <select class="font-selector" onchange="setFont(this)">
               <option value="Impact">Impact</option>
-              <option value="Ariel">Ariel</option>
+              <option value="Arial">Arial</option>
               <option value="Verdana">Verdana</option>
               <option value="Tahoma">Tahoma</option>
               <option value="Trebuchet Ms">Trebuchet Ms</option>
